# test2

./: main2.c
.github/workflows/: devskim.yml
DCS/: LICENSE  README.md  pom.xml
DCS/ammos-cryptolib/: CMakeLists.txt  README.md
DCS/ammos-cryptolib/kmc_sdls/: CMakeLists.txt
DCS/ammos-cryptolib/kmc_sdls/kmc_crypto_util/: CMakeLists.txt
DCS/ammos-cryptolib/kmc_sdls/kmc_crypto_util/app/: kmc_apply_security.c  kmc_crypto_sequence.c  kmc_process_security.c
DCS/ammos-cryptolib/kmc_sdls/kmc_crypto_util/include/: kmc_apply_security.h  kmc_crypto_sequence.h  kmc_process_security.h  kmc_shared_util.h
DCS/ammos-cryptolib/kmc_sdls/kmc_crypto_util/src/: kmc_shared_util.c
DCS/ammos-cryptolib/kmc_sdls/kmc_perf_test/: CMakeLists.txt
DCS/ammos-cryptolib/kmc_sdls/kmc_perf_test/src/: performance_test.c
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_java/: CMakeLists.txt  kmc_sdls.i
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_java/gov/nasa/jpl/ammos/asec/kmc/: KmcSdlsEngine.java  SDLS_TC_TransferFrame.java
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_java/kmc_sdls_java_test/: CMakeLists.txt  KmcSdlsJavaTest.java  kmc_sdls_java_local_unit_tests.properties
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_python/: CMakeLists.txt  requirements.txt
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_python/KmcSdlsClient/: CMakeLists.txt  README.rst  makefile.old  setup.py
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_python/KmcSdlsClient/src/gov/nasa/jpl/ammos/kmc/sdlsclient/: KmcSdlsClient.py
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_python/_cffi_src/: CMakeLists.txt  cffi_definitions.i  gen_cffi_def.sh  tasks.py
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_python/kmc_python_tests/: CMakeLists.txt  kmc_python_kmccrypto_mariadb_cam_test.py  kmc_python_kmccrypto_mariadb_mtls_test.py  kmc_python_kmccrypto_mariadb_test.py  kmc_python_mariadb_test.py  kmc_python_test.py
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_python/kmc_sdls_python_scripts/: CMakeLists.txt  kmc_sdls_test_app.properties  kmc_sdls_test_app.py
DCS/ammos-cryptolib/kmc_sdls/kmc_sdls_tests/: CMakeLists.txt
DCS/ammos-cryptolib/kmc_sdls/public_inc/: kmc_sdls.h
DCS/ammos-cryptolib/kmc_sdls/src/: kmc_sdls.c
DCS/kmc-crypto/: pom.xml
DCS/kmc-crypto-library/: pom.xml
DCS/kmc-crypto-service/: pom.xml
DCS/kmc-crypto/class-diagrams/: kmc-crypto.ucls
DCS/kmc-key-client/: pom.xml
DCS/kmc-resources/crypto-client/etc/: kmc-crypto-log4j2.xml  kmc-crypto.cfg
DCS/kmc-resources/crypto-service/: kmc-crypto-service-log4j2.xml  kmc-crypto-service.properties  kmc-crypto-service.service  kmc-crypto-service.sysconfig  kmc-crypto-service.xml  kmc-crypto.cfg
DCS/kmc-resources/kmc-test/input/: asymmetric-keys.jks  cmdenc-test-keys.bcfks  crypto-test-keys.bcfks  keystore-test.jck  kmc-all-SAs.csv  kmc-all-keys.bcfks  kmc-all-keys.p12  symmetric-keys.jck  testfile-small.txt
DCS/kmc-resources/kmc-test/sql/: create_sadb_jpl_test_security_associations.sql  create_sadb_jpl_test_users.sql  drop_sadb.sql
DCS/kmc-resources/sa-mgmt-service/: kmc-sa-mgmt-service-log4j2.xml  kmc-sa-mgmt-service.properties  kmc-sa-mgmt-service.service  kmc-sa-mgmt-service.sysconfig  kmc-sa-mgmt-service.xml
DCS/kmc-resources/scripts/: build.sh  deploy.sh  finish_deploy.sh  setenv.sh
DCS/kmc-resources/sdls-service/: kmc-sdls-service-log4j2.xml  kmc-sdls-service.properties  kmc-sdls-service.service  kmc-sdls-service.sysconfig  kmc-sdls-service.xml
DCS/kmc-sa-mgmt/: pom.xml
DCS/kmc-sa-mgmt/kmc-sa-cli/: README.md  pom.xml
DCS/kmc-sa-mgmt/kmc-sa-db-api/: pom.xml
DCS/kmc-sa-mgmt/kmc-sa-db-lib/: pom.xml
DCS/kmc-sa-mgmt/kmc-sa-gui/: README.md  pom.xml
DCS/kmc-sdls-service/: .gitignore  pom.xml
DCS/kmip-client/: pom.xml
MMGIS/: CHANGELOG.md  CITATION.cff  Dockerfile  Dockerfile.legacy  README.md  _docker-entrypoint.sh  docker-compose.sample.yml  docker-compose.v1-sample.yml  package-lock.json  package.json  python-environment.yml  python-requirements.txt  sample.env
MMGIS/API/: connection.js  logger.js  utils.js
MMGIS/API/Backend/Accounts/: setup.js
MMGIS/API/Backend/Config/: setup.js  validate.js
MMGIS/API/Backend/Datasets/: setup.js
MMGIS/API/Backend/Draw/: setup.js
MMGIS/API/Backend/GeneralOptions/: setup.js
MMGIS/API/Backend/Geodatasets/: setup.js
MMGIS/API/Backend/LongTermToken/: setup.js
MMGIS/API/Backend/Shortener/: setup.js
MMGIS/API/Backend/Stac/: setup.js
MMGIS/API/Backend/Users/: setup.js
MMGIS/API/Backend/Utils/: setup.js
MMGIS/API/Backend/Webhooks/: setup.js
MMGIS/API/templates/: config_template.js
MMGIS/Missions/: spice-kernels-conf.example.mars2020.json
MMGIS/adjacent-servers/: adjacent-servers-proxy.js  adjacent-servers.js
MMGIS/adjacent-servers/stac/: .env.example
MMGIS/adjacent-servers/tipg/: .env.example
MMGIS/adjacent-servers/titiler-pgstac/: .env.example
MMGIS/auxiliary/demtiles/: gdal2demtiles.py
MMGIS/auxiliary/gdal2customtiles/: gdal2customtiles.py  rasters2customtiles.py
MMGIS/auxiliary/gdal2customtiles/legacy/: gdal2customtiles.py
MMGIS/auxiliary/gdal2tiles4extent/: gdal2tiles4extent.py
MMGIS/auxiliary/geojson2ndgeojson/: README.md  geojson2ndgeojson.js  test.geojson
MMGIS/auxiliary/stac/create-stac-items/: create-stac-items.py
MMGIS/config/login/: adminlogin.css  adminlogin.js
MMGIS/configuration/: env.js
MMGIS/configure/: README.md
MMGIS/configure/public/: index.html  toolConfigs.json
MMGIS/configure/src/core/: Configure.js  ConfigureStore.js  Maker.js  calls.js  constants.js  injectables.js  utils.js  validators.js
MMGIS/docs/: mmgis-openapi.json
MMGIS/docs/swagger/: swaggerCSS.css  swaggerJS.js
MMGIS/private/api/: 2ptsToProfile.py  BandsToProfile.py  chronice.py  gdalinfoMinMax.py  ll2aerll.py
MMGIS/public/: index.html  login.css  login.js  resetPassword.css  resetPassword.js
MMGIS/public/helps/: LayersTool-Filtering.md
MMGIS/scripts/: build.js  init-db.js  middleware.js  server.js
MMGIS/src/: App.js  index.css  index.js
MMGIS/src/css/: mmgis.css  mmgisUI.css
MMGIS/src/essence/: essence.js
MMGIS/src/pre/: calls.js
MMGIS/views/: configure.pug  error.pug  login.pug  resetpassword.pug
(+483 files in other folders)
